--- a/package.json
+++ b/package.json
@@ -3,13 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@google/generative-ai": "^0.24.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@runwayml/sdk": "^2.0.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/slim": "^3.8.1",
+    "axios": "^1.8.4",
+    "buffer": "^6.0.3",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "firebase": "^11.6.0",
+    "form-data": "^4.0.2",
+    "framer-motion": "^12.7.4",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "remark-gfm": "^4.0.1",
+    "tsparticles": "^3.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^3.0.5"
   }
 }
